// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddConnectionDrawerWidget /> can handle a custom JBrowse 1 data directory URL 1`] = `
<div>
  <div
    class="AddConnectionDrawerWidget-root-457"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-vertical AddConnectionDrawerWidget-stepper-458"
    >
      <div
        class="MuiStep-root MuiStep-vertical MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
              />
            </svg>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
            >
              Select a Connection Type
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root"
          icon="1"
        >
          <div
            class="MuiCollapse-container MuiStepContent-transition"
            style="min-height: 0px; height: 0px; transition-duration: 0ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <form
                  autocomplete="off"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth"
                  >
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                    >
                      <div
                        aria-haspopup="true"
                        aria-pressed="false"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
                        role="button"
                        tabindex="0"
                      >
                        JBrowse 1 Data
                      </div>
                      <input
                        type="hidden"
                        value="JBrowse1Connection"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-filled"
                    >
                      A JBrowse 1 data directory
                      <a
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root"
                        href="//jbrowse.org/"
                        rel="noopener noreferrer"
                        role="button"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                          >
                            open_in_new
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </p>
                  </div>
                </form>
                <div
                  class="AddConnectionDrawerWidget-actionsContainer-460"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root AddConnectionDrawerWidget-button-459 MuiButton-text Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root AddConnectionDrawerWidget-button-459 MuiButton-contained MuiButton-containedPrimary"
                    data-testid="addConnectionNext-notcurrent"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Connect
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-active"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="12"
              />
              <text
                class="MuiStepIcon-text"
                text-anchor="middle"
                x="12"
                y="16"
              >
                2
              </text>
            </svg>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
            >
              Configure Connection
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root MuiStepContent-last"
          icon="2"
        >
          <div
            class="MuiCollapse-container MuiStepContent-transition"
            style="min-height: 0px; height: 0px; transition-duration: 0ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  class="ConfigurationEditor-root-687"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation1 makeStyles-paper-689 MuiPaper-rounded"
                  >
                    <div
                      class="makeStyles-paperContent-690"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                          data-shrink="true"
                        >
                          name
                        </label>
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiInput-input"
                            type="text"
                            value="nameOfJBrowse1Connection"
                          />
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-filled"
                        >
                          a unique name for this connection
                        </p>
                      </div>
                    </div>
                    <div
                      class="makeStyles-slotModeSwitch-691"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root"
                        tabindex="0"
                        title="convert to callback"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                          >
                            radio_button_unchecked
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiPaper-root MuiPaper-elevation1 makeStyles-paper-689 MuiPaper-rounded"
                  >
                    <div
                      class="makeStyles-paperContent-690"
                    >
                      <fieldset
                        class="MuiFormControl-root"
                      >
                        <div
                          class="MuiFormGroup-root"
                          role="radiogroup"
                        >
                          <label
                            class="MuiFormControlLabel-root"
                          >
                            <span
                              aria-disabled="false"
                              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-725 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-726 Mui-checked MuiIconButton-colorSecondary"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <div
                                  class="PrivateRadioButtonIcon-root-729 PrivateRadioButtonIcon-checked-731"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    role="presentation"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-730"
                                    focusable="false"
                                    role="presentation"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </div>
                                <input
                                  checked=""
                                  class="PrivateSwitchBase-input-728"
                                  type="radio"
                                  value="uri"
                                />
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </span>
                            <span
                              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                            >
                              URL
                            </span>
                          </label>
                          <label
                            class="MuiFormControlLabel-root Mui-disabled"
                          >
                            <span
                              aria-disabled="true"
                              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-725 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-disabled-727 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                              tabindex="-1"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <div
                                  class="PrivateRadioButtonIcon-root-729"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    role="presentation"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-730"
                                    focusable="false"
                                    role="presentation"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </div>
                                <input
                                  class="PrivateSwitchBase-input-728"
                                  disabled=""
                                  type="radio"
                                  value="localPath"
                                />
                              </span>
                            </span>
                            <span
                              class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
                            >
                              Local File
                            </span>
                          </label>
                        </div>
                      </fieldset>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                          data-shrink="true"
                        >
                          dataDirLocation
                        </label>
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiInput-input"
                            type="text"
                            value="http://mysite.com/jbrowse/data/"
                          />
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-filled"
                        >
                          the location of the JBrowse 1 data directory, often something like http://mysite.com/jbrowse/data/
                        </p>
                      </div>
                    </div>
                    <div
                      class="makeStyles-slotModeSwitch-691"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root"
                        tabindex="0"
                        title="convert to callback"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                          >
                            radio_button_unchecked
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiPaper-root MuiPaper-elevation1 makeStyles-paper-689 MuiPaper-rounded"
                  >
                    <div
                      class="makeStyles-paperContent-690"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                          data-shrink="false"
                        >
                          assemblyName
                        </label>
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiInput-input"
                            type="text"
                            value=""
                          />
                        </div>
                        <p
                          class="MuiFormHelperText-root"
                        >
                          the name of the assembly to which to add tracks
                        </p>
                      </div>
                    </div>
                    <div
                      class="makeStyles-slotModeSwitch-691"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root"
                        tabindex="0"
                        title="convert to callback"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                          >
                            radio_button_unchecked
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiPaper-root MuiPaper-elevation1 makeStyles-paper-689 MuiPaper-rounded"
                  >
                    <div
                      class="makeStyles-paperContent-690"
                    >
                      <div
                        class="MuiFormControl-root"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-725 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                              <input
                                class="PrivateSwitchBase-input-728"
                                data-indeterminate="false"
                                type="checkbox"
                                value=""
                              />
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            useAssemblySequences
                          </span>
                        </label>
                        <p
                          class="MuiFormHelperText-root"
                        >
                          override an existing assembly sequence with the one from this connection. probably safe to ignore this.
                        </p>
                      </div>
                    </div>
                    <div
                      class="makeStyles-slotModeSwitch-691"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root"
                        tabindex="0"
                        title="convert to callback"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                          >
                            radio_button_unchecked
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="AddConnectionDrawerWidget-actionsContainer-460"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root AddConnectionDrawerWidget-button-459 MuiButton-text"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root AddConnectionDrawerWidget-button-459 MuiButton-contained MuiButton-containedPrimary"
                    data-testid="addConnectionNext"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Connect
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AddConnectionDrawerWidget /> renders 1`] = `
<div
  class="AddConnectionDrawerWidget-root-1"
>
  <div
    class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-vertical AddConnectionDrawerWidget-stepper-2"
  >
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              1
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
          >
            Select a Connection Type
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="1"
      >
        <div
          class="MuiCollapse-container MuiStepContent-transition MuiCollapse-entered"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <form
                autocomplete="off"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                  >
                    <div
                      aria-haspopup="true"
                      aria-pressed="false"
                      class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
                      role="button"
                      tabindex="0"
                    >
                      <span>
                        ​
                      </span>
                    </div>
                    <input
                      type="hidden"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSelect-icon"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </form>
              <div
                class="AddConnectionDrawerWidget-actionsContainer-4"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root AddConnectionDrawerWidget-button-3 MuiButton-text Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="MuiButtonBase-root MuiButton-root AddConnectionDrawerWidget-button-3 MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
                  data-testid="addConnectionNext"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    Next
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              2
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            Configure Connection
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root MuiStepContent-last"
        disabled=""
        icon="2"
      />
    </div>
  </div>
</div>
`;
